# Policy_Impact_Score_Singapore

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  ANSWER_SCIENTIFIC_BASIS_VIETNAMESE.md  COMPREHENSIVE_POLICY_RESEARCH_REPORT.md  COMPREHENSIVE_SCIENTIFIC_ENHANCEMENT_COMPLETE.md  CROSS_STUDY_ANALYSIS_REPORT.md  Dockerfile  ENHANCED_INTERNATIONAL_VALIDATION_REPORT.md  EXPANDED_ANALYSIS_COMPLETION_REPORT.md  FINAL_SCIENTIFIC_VALIDITY_REPORT.md  GITHUB_PAGES_SETUP.md  LICENSE  PEER_REVIEW_IMPLEMENTATION_SUMMARY.md  PEER_REVIEW_RESPONSE.md  PROJECT_COMPLETION_SUMMARY.md  README.md  REAL_DATA_INTEGRATION_RESULTS.md  SCIENTIFIC_RIGOR_ASSESSMENT.md  TEST_RESULTS.md  comprehensive_analysis.py  comprehensive_policy_research.py  comprehensive_validity_check.py  create_comprehensive_dashboard.py  create_dashboard.py  create_expanded_dashboard.py  cross_study_dashboard.py  dashboard_test.html  dashboard_test_simple.html  data_validation_audit.py  demo_improvements.py  docker-compose.yml  enhanced_international_validation.py  expanded_policy_analysis.py  final_verification.py  main.py  mypy.ini  pyproject.toml  (+13 more)
.github/: copilot-instructions.md
.github/workflows/: ci.yml
data/: README.md  sample_assessments.csv  sample_policies.csv
docs/: DATA_REQUIREMENTS.md  README.md  SCORING_CRITERIA_SCIENTIFIC_BASIS.md  _config.yml  index.html
docs/assets/css/: main.css
docs/assets/js/: main.js
docs/pages/: dashboard.html  data-sources.html  findings.html  methodology.html  policy_calculator.html  validation.html
notebooks/: real_data_analysis.ipynb  workspace_setup.ipynb
output/: assessments.csv  comprehensive_validity_assessment.json  enhanced_transparency_validation_report.json  policies.csv  scientific_validation_report.json  scientific_validity_assessment.json  summary_report.json
output/comprehensive_policy_research/: central_provident_fund_detailed_research_20250626_105450.json  comprehensive_policy_research_20250626_105450.json  goods_services_tax_detailed_research_20250626_105450.json  housing_development_act_detailed_research_20250626_105450.json  national_service_detailed_research_20250626_105450.json  skillsfuture_initiative_detailed_research_20250626_105450.json
output/cross_study_analysis/: comprehensive_summary_20250626_003826.json  data_integrity_report_20250626_003826.csv  economic_impact_analysis_20250626_003826.csv  international_benchmarks_20250626_003826.csv  policy_category_matrix_20250626_003826.csv  success_factor_analysis_20250626_003826.csv  time_series_analysis_20250626_003826.csv
output/expanded_analysis/: DATA_VALIDATION_REPORT_20250626_120701.md  EXPANDED_POLICY_ANALYSIS_20250626_112947.md  expanded_policy_analysis_20250626_112406.json  expanded_policy_dashboard_20250626_113306.html  policy_analysis_summary_20250626_112947.txt  singapore_expanded_policy_analysis_20250626_112947.xlsx  test_report_20250626_112554.txt  test_report_20250626_112710.txt
output/real_data_analysis/: assessments.csv  policies.csv  policy_timeline_analysis.csv  summary_report.json
src/: __init__.py  analysis.py  causal_inference.py  cross_reference.py  final_enhancement_report.py  framework.py  logging_config.py  mcda.py  models.py  quantitative_scoring.py  report_generator.py  scientific_foundation.py  scientific_validity_check.py  utils.py  utils_main.py  validation.py  visualization.py
src/utils/: __init__.py  dashboard.py
templates/: report_template.md  singapore_assessments_template.csv  singapore_policies_template.csv
tests/: conftest.py  test_expanded_analysis.py  test_models.py
